--- a/html/profiloUtente.html
+++ b/html/profiloUtente.html
@@ -3,8 +3,10 @@
 
 <head>
     <title>Pagina profilo utente</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../images/logoPiccolo.ico" />
     <link rel="stylesheet" type="text/css" href="../css/stile.css">
+    <link rel="stylesheet" type="text/css" href="../css/stileMobile.css">
 </head>
 
 <body>
