--- a/html/nuoviArticoli.html
+++ b/html/nuoviArticoli.html
@@ -39,12 +39,12 @@
 
             <div class="sceltaCittaTipologiaBis">
                 <h4>- Data inzio</h4>
-                <input type="text" name="dataI" placeholder="gg/mm/aaaa">
+                <input type="text" name="dataI" placeholder="aaaa/mm/gg">
             </div>
 
             <div class="sceltaCittaTipologiaBis">
                 <h4>- Data fine</h4>
-                <input type="text" name="dataF" placeholder="gg/mm/aaaa">
+                <input type="text" name="dataF" placeholder="aaaa/mm/gg">
             </div>
 
             <div class="sceltaCittaTipologia">
