--- a/html/registrazione.html
+++ b/html/registrazione.html
@@ -54,6 +54,8 @@
         </fieldset>
     </form>
 
+        $MESSAGGIO$
+
     <div class="linkAccessoRegistra">
         Hai gia' un profilo utente? <a href="accesso.html">Clicca qui</a>
     </div>
