--- a/html/bottonea.html
+++ b/html/bottonea.html
@@ -1,3 +1,3 @@
-<a href="html/registrazione.html">REGISTRATI</a>&nbsp;&nbsp;
-<a href="html/accesso.html">ACCEDI</a>
+<a href="php/registrazione.php">REGISTRATI</a>&nbsp;&nbsp;
+<a href="php/login.php">ACCEDI</a>
 
