--- a/html/prenotazioniBiglietto.html
+++ b/html/prenotazioniBiglietto.html
@@ -58,8 +58,7 @@
                         $EMAIL$
                     </div>
 
-
-                    <input onclick="prenotazione()" class="prenota" type="submit" name="PRENOTAZIONE" value="PRENOTA">
+                    <input class="prenota" type="submit" name="PRENOTAZIONE" value="PRENOTA">
                 </form>
             </div>
         </div>
@@ -68,4 +67,3 @@
 
 </html>
 
-<script src="../JS/messaggioPrenotazione.js"></script>
