sezione prenotazione medi query

--- a/html/nuoviArticoli.html
+++ b/html/nuoviArticoli.html
@@ -29,12 +29,12 @@
             <div class="sceltaCittaTipologia">
                 <h4>- Tipologia articolo <sup>(*)</sup></h4>
                 <div class="sceltaInput">
-                <input type="radio" name="tipologia" value="eventi"> Eventi<br>
-                <input type="radio" name="tipologia" value="teatro"> Teatro<br>
-                <input type="radio" name="tipologia" value="cucina"> Cucina<br>
-                <input type="radio" name="tipologia" value="Novit&agrave"> Novit&agrave<br>
-                <input type="radio" name="tipologia" value="arte"> Arte<br>
-                <input type="radio" name="tipologia" value="attrazionia"> Attrazioni
+                    <input type="radio" name="tipologia" value="eventi"> Eventi<br>
+                    <input type="radio" name="tipologia" value="teatro"> Teatro<br>
+                    <input type="radio" name="tipologia" value="cucina"> Cucina<br>
+                    <input type="radio" name="tipologia" value="Novit&agrave"> Novit&agrave<br>
+                    <input type="radio" name="tipologia" value="arte"> Arte<br>
+                    <input type="radio" name="tipologia" value="attrazionia"> Attrazioni
                 </div>
             </div>
 
@@ -52,9 +52,11 @@
 
             </div>
 
-            <div class="sceltaCittaTipologiaBis">
-                <h4>- Data fine</h4>
-                <input type="text" name="dataF" placeholder="aaaa/mm/gg">
+            <div class="sceltaCittaTipologia">
+                <div class="sceltaCittaTipologiaBis">
+                    <h4>- Data fine</h4>
+                    <input type="text" name="dataF" placeholder="aaaa/mm/gg">
+                </div>
             </div>
 
             <div class="sceltaCittaTipologia">
