--- a/html/prenotazione.html
+++ b/html/prenotazione.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <title>Prenotazione inviata</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../images/logoPiccolo.ico">
         <link rel="stylesheet" type="text/css" href="../css/stile.css">
+        <link rel="stylesheet" type="text/css" href="../css/stileMobile.css">
     </head>
 
     <body>
