ristabili i collegamenti tra login e register

--- a/html/accesso.html
+++ b/html/accesso.html
@@ -38,7 +38,7 @@
     $MESSAGGIO$
 
     <div class="linkAccessoRegistra">
-        Non hai ancora un profilo? <a href="registrazione.html">Crealo qui</a>
+        Non hai ancora un profilo? <a href="../php/registrazione.php">Crealo qui</a>
     </div>
 
     <div class="linkAccessoRegistra">
