--- a/html/registrazione.html
+++ b/html/registrazione.html
@@ -57,7 +57,7 @@
         $MESSAGGIO$
 
     <div class="linkAccessoRegistra">
-        Hai gia' un profilo utente? <a href="accesso.html">Clicca qui</a>
+        Hai gia' un profilo utente? <a href="../php/login.php">Clicca qui</a>
     </div>
 
     <div class="linkAccessoRegistra">
