--- a/html/prenotazione.html
+++ b/html/prenotazione.html
@@ -13,7 +13,7 @@
            <h4>La tua prenotazione e' stata presa in carico!</h4> <br>
            Provvederemo a verificare l'e-mail da lai inserita per accertarci che sia registrata! In caso affermativo contatteremo gli organizzatori che provvederenno a fornerle tutte le istruzioni direttamente alla casella mail da lei fornitoci.<br>
            Buona Giornata!<br>
-           Torna alla <a href="../index.php">Home del sito</a>.
+           Torna alla <a href="../index.php">Home</a> del sito.
         </div>
     </body>
 </html>
