--- a/html/citta.html
+++ b/html/citta.html
@@ -1,4 +1,4 @@
-<img class="imgCitta" src="$IMGCITTA$" alt="$ALT$" width="100%" height="auto">
+<img class="imgCitta" src="$IMGCITTA$" alt="$ALT$">
 
 
 <div class="bottoniEventi">
