--- a/html/paginaHomeSito.html
+++ b/html/paginaHomeSito.html
@@ -1,7 +1,7 @@
 <div class="contenutoHomePage">
 
 
-        <img class="fotoHome" src="https://resources.homeaway.it/info/files/live/sites/it/files/shared/HIPS/vacanze-a-tema/bassa-%20stagione/bassa%20stagione-venezia--ts-2010-09-23T15%3A33%3A38_000-04%3A00.jpg" alt="Venetoimg">
+        <img class="fotoHome" src="images/veneto.jpeg" alt="Venetoimg">
 
 
     <div class="foto">
