--- a/html/404.html
+++ b/html/404.html
@@ -6,6 +6,8 @@
     <title>404 | Pagina non trovata</title>
     <link rel="icon" href="images/logoPiccolo.ico" />
     <link rel="stylesheet" type="text/css" href="css/stile.css">
+    <link rel="stylesheet" type="text/css" href="css/stileMobile.css">
+    <link rel="stylesheet" type="text/css" href="css/stilePrint.css">
 </head>
 
 <body>
