--- a/html/404.html
+++ b/html/404.html
@@ -1,9 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
 <head>
     <title>404 | Pagina non trovata</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="images/logoPiccolo.ico" />
     <link rel="stylesheet" type="text/css" href="css/stile.css">
     <link rel="stylesheet" type="text/css" href="css/stileMobile.css">
