--- a/html/prenotazione.html
+++ b/html/prenotazione.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
     <head>
         <title>Prenotazione inviata</title>
+        <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../images/logoPiccolo.ico">
         <link rel="stylesheet" type="text/css" href="../css/stile.css">
