--- a/home.html
+++ b/home.html
@@ -2,8 +2,8 @@
 <html lang="it">
 
 <head>
-    <meta charset="UTF-8">
     <title>$TITOLO$</title>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="images/logoPiccolo.ico">
     <link rel="stylesheet" type="text/css" href="css/stile.css">
