--- a/html/prenotazione.html
+++ b/html/prenotazione.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="../images/logoPiccolo.ico">
         <link rel="stylesheet" type="text/css" href="../css/stile.css">
         <link rel="stylesheet" type="text/css" href="../css/stileMobile.css">
-        <link rel="stylesheet" type="text/css" href="css/stilePrint.css">
+        <link rel="stylesheet" type="text/css" href="../css/stilePrint.css">
     </head>
 
     <body>
