--- a/html/accesso.html
+++ b/html/accesso.html
@@ -3,11 +3,11 @@
 
 <head>
     <title>Accedi</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="../images/logoPiccolo.ico">
-    <link rel="stylesheet" type="text/css" href="../css/stile.css">
-    <link rel="stylesheet" type="text/css" href="../css/stileMobile.css">
-    <link rel="stylesheet" type="text/css" href="css/stilePrint.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="../images/logoPiccolo.ico" />
+    <link rel="stylesheet" type="text/css" href="../css/stile.css" />
+    <link rel="stylesheet" type="text/css" href="../css/stileMobile.css" />
+    <link rel="stylesheet" type="text/css" href="css/stilePrint.css" />
 </head>
 
 <body>
