--- a/html/boxArticolo.html
+++ b/html/boxArticolo.html
@@ -21,7 +21,7 @@
 
 <div class="boxImmagineTesto">
     <div class="immagineTesto">
-        <img src="$URL$" alt="$ALT$">
+        <img src="$URL$" alt="$ALT$" />
         <p>$TESTO$</p>
     </div>
 
