--- a/home.html
+++ b/home.html
@@ -4,11 +4,11 @@
 <head>
     <title>$TITOLO$</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="images/logoPiccolo.ico">
-    <link rel="stylesheet" type="text/css" href="css/stile.css">
-    <link rel="stylesheet" type="text/css" href="css/stileMobile.css">
-    <link rel="stylesheet" type="text/css" href="css/stilePrint.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="images/logoPiccolo.ico" />
+    <link rel="stylesheet" type="text/css" href="css/stile.css" />
+    <link rel="stylesheet" type="text/css" href="css/stileMobile.css" />
+    <link rel="stylesheet" type="text/css" href="css/stilePrint.css" />
 </head>
 
 <body>
