chiusi molti tag

--- a/html/citta.html
+++ b/html/citta.html
@@ -1,4 +1,4 @@
-<img class="imgCitta" src="$IMGCITTA$" alt="$ALT$">
+<img class="imgCitta" src="$IMGCITTA$" alt="$ALT$" />
 
 
 <div class="bottoniEventi">
