--- a/html/contatti.html
+++ b/html/contatti.html
@@ -11,24 +11,24 @@
     <hr>
 
     <div class="box">
-        <img class="boxLogo" src="images/contatti/logoFisso.png" alt="fisso">
+        <img class="boxLogo" src="images/contatti/logoFisso.png" alt="fisso" />
         <div class="numero">+39 049 2328519</div>
     </div>
 
     <div class="box">
-        <img class="boxLogo" src="images/contatti/logoMobile.png" alt="mobile">
+        <img class="boxLogo" src="images/contatti/logoMobile.png" alt="mobile" />
         <div class="numero">+39 347 2231293</div>
     </div>
 
     <div class="box">
-        <img class="boxLogo" src="images/contatti/logoEmail.png" alt="mail">
+        <img class="boxLogo" src="images/contatti/logoEmail.png" alt="mail" />
         <div class="contatto">
             info@venetoinmostra.com
         </div>
     </div>
 
     <div class="box">
-        <img class="boxLogo" src="images/contatti/logoTelegram.png" alt="telegram">
+        <img class="boxLogo" src="images/contatti/logoTelegram.png" alt="telegram" />
         <div class="contatto">
             @Veneto_in_mostra
         </div>
@@ -44,7 +44,7 @@
 
     <div class="indirizzo">
 
-        <a href="https://goo.gl/maps/JXrrvmpKNYL2"><img src="images/contatti/logoSede.png" alt="logoSede"></a>
+        <a href="https://goo.gl/maps/JXrrvmpKNYL2"><img src="images/contatti/logoSede.png" alt="logoSede" /></a>
         <div class="indirizzoCompleto">
             Padova, Via Trieste 63, 35121 <br><br> Presso Torre Archimede, 7&deg; Piano
         </div>
