--- a/html/notizieHome.html
+++ b/html/notizieHome.html
@@ -1,7 +1,7 @@
 <div class="articoloHome">
     <div class="boxArticoloHome">
         <div class="immagineArticoloHome">
-            <a href="$LINK$"><img src="$IMG$" alt="$ALT$"></a>
+            <a href="$LINK$"><img src="$IMG$" alt="$ALT$" /></a>
         </div>
 
         <div class="titoloArticoloHome">
