--- a/html/paginaHomeSito.html
+++ b/html/paginaHomeSito.html
@@ -1,12 +1,12 @@
 <div class="contenutoHomePage">
 
 
-        <img class="fotoHome" src="images/veneto.jpeg" alt="Venetoimg">
+        <img class="fotoHome" src="images/veneto.jpeg" alt="Venetoimg" />
 
 
     <div class="foto">
         <div class="boxFotoCitta">
-            <a href="index.php?pagina=padova"><img src="images/bottoniHome/padova.jpg" alt="padova"></a>
+            <a href="index.php?pagina=padova"><img src="images/bottoniHome/padova.jpg" alt="padova" /></a>
             <div class="nomeCittaFoto">
                 <a href="index.php?pagina=padova">
                     Padova
