--- a/html/prenotazioniBiglietto.html
+++ b/html/prenotazioniBiglietto.html
@@ -3,11 +3,11 @@
 
 <head>
     <title>Prenotazione Biglietto</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="../images/logoPiccolo.ico" />
-    <link rel="stylesheet" type="text/css" href="../css/stile.css">
-    <link rel="stylesheet" type="text/css" href="../css/stileMobile.css">
-    <link rel="stylesheet" type="text/css" href="../css/stilePrint.css">
+    <link rel="stylesheet" type="text/css" href="../css/stile.css" />
+    <link rel="stylesheet" type="text/css" href="../css/stileMobile.css" />
+    <link rel="stylesheet" type="text/css" href="../css/stilePrint.css" />
 </head>
 
 <body>
@@ -48,11 +48,11 @@
 
 
                     <div class="inserisciAcquistaBiglietto">
-                        <label for="nome">Nome:</label> <br> <input type="text" id="nome" name="nome">
+                        <label for="nome">Nome:</label> <br> <input type="text" id="nome" name="nome" />
                     </div>
 
                     <div class="inserisciAcquistaBiglietto">
-                        <label for="cognome">Cognome:</label> <br> <input type="text" id="cognome" name="cognome">
+                        <label for="cognome">Cognome:</label> <br> <input type="text" id="cognome" name="cognome" />
                     </div>
 
                     <div class="inserisciAcquistaBiglietto">
@@ -62,7 +62,7 @@
 
 
                     <div class="bottonePrenota">
-                        <input class="prenota" type="submit" name="PRENOTAZIONE" value="PRENOTA">
+                        <input class="prenota" type="submit" name="PRENOTAZIONE" value="PRENOTA" />
                     </div>
                 </fieldset>
             </form>
