--- a/html/profiloUtente.html
+++ b/html/profiloUtente.html
@@ -3,11 +3,11 @@
 
 <head>
     <title>Pagina profilo utente</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="../images/logoPiccolo.ico" />
-    <link rel="stylesheet" type="text/css" href="../css/stile.css">
-    <link rel="stylesheet" type="text/css" href="../css/stileMobile.css">
-    <link rel="stylesheet" type="text/css" href="../css/stilePrint.css">
+    <link rel="stylesheet" type="text/css" href="../css/stile.css" />
+    <link rel="stylesheet" type="text/css" href="../css/stileMobile.css" />
+    <link rel="stylesheet" type="text/css" href="../css/stilePrint.css" />
 </head>
 
 <body>
@@ -44,21 +44,21 @@
         <fieldset>
             <div class="input">
                 <label for="vecchiaPw">Vecchia Password:</label>
-                <input type="password" id="vecchiaPw" name="Vecchiapsw">
+                <input type="password" id="vecchiaPw" name="Vecchiapsw" />
             </div>
 
             <div class="input">
                 <label for="nuovaPw">Nuova password:</label>
-                <input type="password" id="nuovaPw" name="Nuovapsw">
+                <input type="password" id="nuovaPw" name="Nuovapsw" />
             </div>
 
             <div class="input">
                 <label for="nuovaPw2">Conferma nuova password:</label>
-                <input type="password" id="nuovaPw2" name="Nuovapsw2">
+                <input type="password" id="nuovaPw2" name="Nuovapsw2" />
             </div>
 
             <div class="bottonee">
-                <input type="submit" class="btn" name="CAMBIAPSW" value="MODIFICA">
+                <input type="submit" class="btn" name="CAMBIAPSW" value="MODIFICA" />
             </div>
         </fieldset>
     </form>
