--- a/html/NavigationBarUp.html
+++ b/html/NavigationBarUp.html
@@ -1,12 +1,12 @@
 <div class="upnav">
     <div class="account" onclick="apriLogin()">
-        <img src="images/account.png" alt="login">
+        <img src="images/account.png" alt="login" />
     </div>
 
-    <a href="index.php"><img class="logo" src="images/Logo.png" alt="Veneto in mostra"></a>
+    <a href="index.php"><img class="logo" src="images/Logo.png" alt="Veneto in mostra" /></a>
 
     <div class="miniLogo">
-        <a href="index.php"><img src="images/logoPiccolo.ico" alt="Veneto in mostra"></a>
+        <a href="index.php"><img src="images/logoPiccolo.ico" alt="Veneto in mostra" /></a>
     </div>
 
 
@@ -15,7 +15,7 @@
         <form class="ricerca" action="index.php?tipo=ricerca" method="post">
 
             <div class="lenteSearch">
-                <button type="submit"><img class="lente" src="images/lente.png" alt="Cerca"></button>
+                <button type="submit"><img class="lente" src="images/lente.png" alt="Cerca" /></button>
             </div>
 
 
