--- a/html/prenotazione.html
+++ b/html/prenotazione.html
@@ -3,18 +3,18 @@
     <head>
         <title>Prenotazione inviata</title>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="../images/logoPiccolo.ico">
-        <link rel="stylesheet" type="text/css" href="../css/stile.css">
-        <link rel="stylesheet" type="text/css" href="../css/stileMobile.css">
-        <link rel="stylesheet" type="text/css" href="../css/stilePrint.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" href="../images/logoPiccolo.ico" />
+        <link rel="stylesheet" type="text/css" href="../css/stile.css" />
+        <link rel="stylesheet" type="text/css" href="../css/stileMobile.css" />
+        <link rel="stylesheet" type="text/css" href="../css/stilePrint.css" />
     </head>
 
     <body>
         <div class="messaggioPrenotazione">
-           <h4>La tua prenotazione e' stata presa in carico!</h4> <br>
-           Provvederemo a verificare l'e-mail da lai inserita per accertarci che sia registrata! In caso affermativo contatteremo gli organizzatori che provvederenno a fornerle tutte le istruzioni direttamente alla casella mail da lei fornitoci.<br>
-           Buona Giornata!<br>
+           <h4>La tua prenotazione e' stata presa in carico!</h4> <br/>
+           Provvederemo a verificare l'e-mail da lai inserita per accertarci che sia registrata! In caso affermativo contatteremo gli organizzatori che provvederenno a fornerle tutte le istruzioni direttamente alla casella mail da lei fornitoci.<br/>
+           Buona Giornata!<br/>
            Torna alla <a href="../index.php">Home</a> del sito.
         </div>
     </body>
