--- a/html/registrazione.html
+++ b/html/registrazione.html
@@ -3,11 +3,11 @@
 
 <head>
     <title>Pagina di registrazione nuovo utente</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="../images/logoPiccolo.ico" />
-    <link rel="stylesheet" type="text/css" href="../css/stile.css">
-    <link rel="stylesheet" type="text/css" href="../css/stileMobile.css">
-    <link rel="stylesheet" type="text/css" href="../css/stilePrint.css">
+    <link rel="stylesheet" type="text/css" href="../css/stile.css" />
+    <link rel="stylesheet" type="text/css" href="../css/stileMobile.css" />
+    <link rel="stylesheet" type="text/css" href="../css/stilePrint.css" />
 </head>
 
 <body>
@@ -21,36 +21,36 @@
         <fieldset>
             <div class="input">
                 <label for="email">E-mail:</label>
-                <input type="email" id="email" name="Email">
+                <input type="email" id="email" name="Email" />
             </div>
 
             <div class="input">
                 <label for="un">Username:</label>
-                <input type="text" id="un" name="Username">
+                <input type="text" id="un" name="Username" />
             </div>
 
             <div class="input">
                 <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="Nome">
+                <input type="text" id="nome" name="Nome" />
             </div>
 
             <div class="input">
                 <label for="cognome">Cognome:</label>
-                <input type="text" id="cognome" name="Cognome">
+                <input type="text" id="cognome" name="Cognome" />
             </div>
 
             <div class="input">
                 <label for="pw">Password (minimo 8 caratteri):</label>
-                <input type="Password" id="pw" name="Password">
+                <input type="Password" id="pw" name="Password" />
             </div>
 
             <div class="input">
                 <label for="pw2">Conferma Password:</label>
-                <input type="Password" id="pw2" name="Password2">
+                <input type="Password" id="pw2" name="Password2" />
             </div>
 
             <div class="bottonee">
-                <input type="submit" name="REGISTRATI" value="REGISTRATI">
+                <input type="submit" name="REGISTRATI" value="REGISTRATI" />
             </div>
         </fieldset>
     </form>
