se copi l'url adesso funziona anche in altri siti

--- a/html/NavigationBarUp.html
+++ b/html/NavigationBarUp.html
@@ -25,7 +25,7 @@
     </div>
 
     <div id="menuAccedi">
-        $ACCEDI$<a href="php/datiUtente.php">$UTENTE$</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="html/nuoviArticoli.html">$NUOVIARTICOLI$</a>
+        $ACCEDI$ $UTENTE$     $NUOVIARTICOLI$
     </div>
 
 
