--- a/html/NavigationBarUp2.html
+++ b/html/NavigationBarUp2.html
@@ -21,7 +21,7 @@
 
         <div class="ricercaPiccola">
             <form class="ricerca" action="index.php?tipo=ricerca" method="post">
-                <input type="text" placeholder=" Cerca..." name="cerca">
+                <input type="text" placeholder=" Cerca nel sito..." name="cerca">
             </form>
         </div>
 
@@ -57,7 +57,7 @@
             </div>
 
 
-            <input type="text" placeholder=" Cerca..." name="cerca">
+            <input type="text" placeholder=" Cerca nel sito..." name="cerca">
         </form>
     </div>
 
