tante belle cose

--- a/html/NavigationBarUp.html
+++ b/html/NavigationBarUp.html
@@ -12,7 +12,7 @@
 
 
     <div class="ricercaHome">
-        <form class="ricerca" action="index.php?tipo=ricerca" method="post">
+        <form class="ricerca" action="index.php?" method="get">
 
             <div class="lenteSearch">
                 <button type="submit"><img class="lente" src="images/lente.png" alt="Cerca" /></button>
@@ -25,13 +25,13 @@
     </div>
 
     <div id="menuAccedi">
-        $ACCEDI$ $UTENTE$     $NUOVIARTICOLI$
+        $ACCEDI$ $UTENTE$ $NUOVIARTICOLI$
     </div>
 
 
 
     <div class="parolaLogin">
-        $ACCEDI$<a href="php/datiUtente.php">$UTENTE$</a>&nbsp;&nbsp;<a href="html/nuoviArticoli.html">$NUOVIARTICOLI$</a>
+        $ACCEDI$ $UTENTE$ $NUOVIARTICOLI$
     </div>
 
 
