--- a/html/NavigationBarUp2.html
+++ b/html/NavigationBarUp2.html
@@ -45,7 +45,7 @@
     </div>
 
     <div id="menuAccedi">
-            $ACCEDI$ $UTENTE$ $NUOVIARTICOLI$
+            $ACCEDI$ $UTENTE$ &nbsp;&nbsp; $NUOVIARTICOLI$
 
     </div>
 
@@ -62,7 +62,7 @@
     </div>
 
     <div class="parolaLogin">
-        $ACCEDI$ $UTENTE$ $NUOVIARTICOLI$
+        $ACCEDI$ $UTENTE$ &nbsp;&nbsp; $NUOVIARTICOLI$
     </div>
 </div>
 
