--- a/html/NavigationBarUp.html
+++ b/html/NavigationBarUp.html
@@ -25,13 +25,13 @@
     </div>
 
     <div id="menuAccedi">
-        $ACCEDI$ $UTENTE$ $NUOVIARTICOLI$
+        $ACCEDI$ $UTENTE$ &nbsp;&nbsp; $NUOVIARTICOLI$
     </div>
 
 
 
     <div class="parolaLogin">
-        $ACCEDI$ $UTENTE$ $NUOVIARTICOLI$
+        $ACCEDI$ $UTENTE$ &nbsp;&nbsp; $NUOVIARTICOLI$
     </div>
 
 
