migliorato il gestore per sito online

--- a/html/prenotazioniBiglietto.html
+++ b/html/prenotazioniBiglietto.html
@@ -27,7 +27,7 @@
                 Prenota biglietti
             </div>
 
-            <form method="post" action="../php/prenotazioneBiglietti.php">
+            <form method="post" action="../php/prenotazioneBiglietti.php?id=$ID$&tab=$TAB$">
                 <fieldset class="fieldset">
                     <div class="numeroBigliettiAcquistoBiglietti">
                         Numero biglietti:
