--- a/html/NavigationBarUp.html
+++ b/html/NavigationBarUp.html
@@ -12,7 +12,7 @@
 
 
     <div class="ricercaHome">
-        <form class="ricerca" action="index.php?" method="get">
+        <form class="ricerca" action="index.php" method="get">
 
             <div class="lenteSearch">
                 <button type="submit"><img class="lente" src="images/lente.png" alt="Cerca" /></button>
