--- a/html/prenotazione.html
+++ b/html/prenotazione.html
@@ -12,8 +12,8 @@
 
     <body>
         <div class="messaggioPrenotazione">
-           <h4>La tua prenotazione e' stata presa in carico!</h4> <br/>
-           Provvederemo a verificare l'e-mail da lai inserita per accertarci che sia registrata! In caso affermativo contatteremo gli organizzatori che provvederenno a fornerle tutte le istruzioni direttamente alla casella mail da lei fornitoci.<br/>
+           <h4>La sua prenotazione e' stata presa in carico!</h4> <br/>
+            Contatteremo gli organizzatori dell'evento che provvederanno a fornirle tutte le istruzioni, inerenti al ritiro dei biglietti, direttamente sulla casella email con cui lei si è iscritto al nostro sito.<br/>
            Buona Giornata!<br/>
            Torna alla <a href="../index.php">Home</a> del sito.
         </div>
