--- a/html/NavigationBarUp2.html
+++ b/html/NavigationBarUp2.html
@@ -20,7 +20,7 @@
     <div id="menuMobile">
 
         <div class="ricercaPiccola">
-            <form class="ricerca" action="index.php?tipo=ricerca" method="post">
+            <form class="ricerca" action="index.php" method="get">
                 <input type="text" placeholder=" Cerca nel sito..." name="cerca">
             </form>
         </div>
@@ -50,7 +50,7 @@
     </div>
 
     <div class="ricercaGrande">
-        <form class="ricerca" action="index.php?" method="get">
+        <form class="ricerca" action="index.php" method="get">
 
             <div class="lenteSearch">
                 <button type="submit"><img class="lente" src="images/lente.png" alt="Cerca" /></button>
