aggiunto caratteri titolo

--- a/html/nuoviArticoli.html
+++ b/html/nuoviArticoli.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="sceltaCittaTipologia">
-                <h4>- Titolo <sup>(*)</sup></h4>
+                <h4>- Titolo (massimo 80 caratteri)<sup>(*)</sup></h4>
                 <textarea name="titoloA"></textarea>
             </div>
 
