--- a/html/paginaHomeSito.html
+++ b/html/paginaHomeSito.html
@@ -1,8 +1,11 @@
 <div class="contenutoHomePage">
 
+    <img class="fotoHome" src="images/veneto.jpeg" alt="Venetoimg" />
 
-        <img class="fotoHome" src="images/veneto.jpeg" alt="Venetoimg" />
-
+    <div class="scrittaHome">
+        Scopri l'intrattenimento della regione Veneto<br />
+        FAI LA TUA SCELTA!
+    </div>
 
     <div class="foto">
         <div class="boxFotoCitta">
