aggiunta scritta home

--- a/html/paginaHomeSito.html
+++ b/html/paginaHomeSito.html
@@ -44,5 +44,9 @@
             </div>
         </div>
 
+       <div class="descrizioneHome">
+           Veneto in Mostra è un sito che racchiude tutto il principale intrattenimento nelle prinicipali città del Veneto, quindi Padova, Verona, Vicenza e Venezia. All'interno del sito è possibile scopire gli tutti gli eventi in programma, i principali locali di ristorazione, spettacoli teatrali e altro ancora. Inoltre non manca ovviamente la possibilità di poter prenotare biglietti per alcuni di questi eventi.
+       </div>
+
     </div>
 </div>
