--- a/html/404.html
+++ b/html/404.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
     <title>404 | Pagina non trovata</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,15 +11,89 @@
 </head>
 
 <body>
-    <div class="box404">
-           <h1>404</h1>
+    <div class="contenitore">
+        <div class="upnav">
+            <div class="account" onclick="apriLogin()">
+                <img src="images/account.png" alt="login" />
+            </div>
+
+            <a href="index.php"><img class="logo" src="images/Logo.png" alt="Veneto in mostra" /></a>
+
+            <div class="miniLogo">
+                <a href="index.php"><img src="images/logoPiccolo.ico" alt="Veneto in mostra" /></a>
+            </div>
+
+
+
+            <div class="ricercaHome">
+                <form class="ricerca" action="index.php" method="get">
+
+                    <div class="lenteSearch">
+                        <button type="submit"><img class="lente" src="images/lente.png" alt="Cerca" /></button>
+                    </div>
+
+
+                    <input type="text" placeholder=" Cerca nel sito..." name="cerca">
+                </form>
+
+            </div>
+
+            <div id="menuAccedi">
+                $ACCEDI$ $UTENTE$ &nbsp;&nbsp; $NUOVIARTICOLI$
+            </div>
+
+
+
+            <div class="parolaLogin">
+                $ACCEDI$ $UTENTE$ &nbsp;&nbsp; $NUOVIARTICOLI$
+            </div>
+
+
+        </div>
+
+
+        <script src="JS/apriLogin.js"></script>
+
+        <div class="box404">
+            <h1>404</h1>
             Ops! Pagina non trovata! <br>
             Ti sei perso? Ritorna alla <a href="index.php">home</a> del sito
+        </div>
+
+        <div class="immagine404">
+            <img src="images/404.png" alt="404">
+        </div>
+
+        <div class="spingiGiu">
+
+        </div>
+
+    </div>
+    <div class="footer">
+        <div class="sinistra">
+            <h2>Social</h2>
+            <hr />
+            <p> Seguici su: </p>
+            <a href="http://www.facebook.com"><img src="images/footer/facebook.jpg" alt="facebook" /></a>
+            <a href="http://www.twitter.com"><img src="images/footer/twitter.jpg" alt="twitter" /></a>
+            <a href="http://www.pinterest.com"><img src="images/footer/pinterest.jpg" alt="pinterest" /></a>
+            <a href="http://www.instagram.com"><img src="images/footer/instagram.jpg" alt="instagram" /></a>
+            <a href="http://www.youtube.com"><img src="images/footer/youtube.jpg" alt="youtube" /></a>
+
+        </div>
+
+        <div class="destra">
+            <h2>Veneto in mostra</h2>
+            <hr />
+            <p>Per inviare i vostri articoli scrivete a: <br /> articoli@venetoinmostra.com <br /><br /> Per altre info: <br /> info@venetoinmostra.com
+            </p>
+        </div>
+
+        <div class="centro">
+            <a href="index.php"><img src="images/Logo.png" alt="Veneto in Mostra" /></a>
+        </div>
     </div>
 
-    <div class="immagine404">
-        <img src="images/404.png" alt="404">
-    </div>
 
 </body>
 
