schermi grandi articolo home

--- a/html/notizieHome.html
+++ b/html/notizieHome.html
@@ -1,15 +1,17 @@
-<div class="articoloHome">
-    <div class="boxArticoloHome">
-        <div class="immagineArticoloHome">
-            <a href="$LINK$"><img src="$IMG$" alt="$ALT$" /></a>
-        </div>
+<div class="boxPrincipaleHome">
+    <div class="articoloHome">
+        <div class="boxArticoloHome">
+            <div class="immagineArticoloHome">
+                <a href="$LINK$"><img src="$IMG$" alt="$ALT$" /></a>
+            </div>
 
-        <div class="titoloArticoloHome">
-            <h3>$TITOLOART$</h3>
-        </div>
+            <div class="titoloArticoloHome">
+                <h3>$TITOLOART$</h3>
+            </div>
 
-        <div class="testoArticoloHome">
-            $TESTO$
+            <div class="testoArticoloHome">
+                $TESTO$
+            </div>
         </div>
     </div>
 </div>
