--- a/pagina404/404.html
+++ b/pagina404/404.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="it">
 
 <head>
     <title>404 | Pagina non trovata</title>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="images/logoPiccolo.ico" />
     <link rel="stylesheet" type="text/css" href="css/stile.css" />
