cambaito alt contatti

--- a/html/contatti.html
+++ b/html/contatti.html
@@ -44,7 +44,7 @@
 
     <div class="indirizzo">
 
-        <a href="https://goo.gl/maps/JXrrvmpKNYL2"><img src="images/contatti/logoSede.png" alt="logoSede" /></a>
+        <a href="https://goo.gl/maps/JXrrvmpKNYL2"><img src="images/contatti/logoSede.png" alt="posizione della sede" /></a>
         <div class="indirizzoCompleto">
             Padova, Via Trieste 63, 35121 <br><br> Presso Torre Archimede, 7&deg; Piano
         </div>
