cambio disposizione file

--- a/nuoviArt/nuoviArticoli.html
+++ b/nuoviArt/nuoviArticoli.html
@@ -12,8 +12,10 @@
 
 <body>
 
+    $MESSAGGIO$
+
     <div class="aggiungiArticolo">
-        <form method="post" action="../php/nuoviArticoli.php">
+        <form method="post" action="nuoviArticoli.php">
             <div class="sceltaCittaTipologia">
                 <div class="tornaIndietroNuovoArticolo">
                     <a href="../index.php">TORNA ALLA HOME DEL SITO</a>
