--- a/profiloUtente/profiloUtente.html
+++ b/profiloUtente/profiloUtente.html
@@ -40,7 +40,7 @@
         Cambia Password:
     </div>
 
-    <form class="inserisciDati" method="POST" action="../php/modificapsw.php">
+    <form class="inserisciDati" method="POST" action="modificapsw.php">
         <fieldset>
             <div class="input">
                 <label for="vecchiaPw">Vecchia Password:</label>
@@ -65,7 +65,7 @@
 
     <div class='box_errore'>$MESSAGGIO$</div>
 
-    <form action="../php/logout.php">
+    <form action="logout.php">
         <div class="logout">
             <button>LOGOUT</button>
         </div>
