--- a/utente/accesso.html
+++ b/utente/accesso.html
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <form class="inserisciDati" method="post" action="../php/login.php">
+    <form class="inserisciDati" method="post" action="login.php">
         <fieldset>
             <div class="input">
                 <label for="un">Username:</label>
@@ -40,7 +40,7 @@
     $MESSAGGIO$
 
     <div class="linkAccessoRegistra">
-        Non hai ancora un profilo? <a href="../php/registrazione.php">Crealo qui</a>
+        Non hai ancora un profilo? <a href="registrazione.php">Crealo qui</a>
     </div>
 
     <div class="linkAccessoRegistra">
