--- a/utente/registrazione.html
+++ b/utente/registrazione.html
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <form class="inserisciDati" method="POST" action="../php/registrazione.php">
+    <form class="inserisciDati" method="POST" action="registrazione.php">
         <fieldset>
             <div class="input">
                 <label for="email">E-mail:</label>
@@ -58,7 +58,7 @@
         $MESSAGGIO$
 
     <div class="linkAccessoRegistra">
-        Hai gia' un profilo utente? <a href="../php/login.php">Clicca qui</a>
+        Hai gia' un profilo utente? <a href="login.php">Clicca qui</a>
     </div>
 
     <div class="linkAccessoRegistra">
